--- a/input.css
+++ b/input.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 @theme {
   --color-neutral: #1C2317;
-  --color-main: #734607;
+  --color-main: #99582a;
+  --color-maind: #522500;
   --color-accents: #3A5F0B;
   --color-white: #D9CBB3;
   --font-main: "Pacifico", sans-serif; 
