--- a/public/output.css
+++ b/public/output.css
@@ -483,6 +483,9 @@
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
@@ -492,8 +495,17 @@
   .gap-12 {
     gap: calc(var(--spacing) * 12);
   }
+  .gap-16 {
+    gap: calc(var(--spacing) * 16);
+  }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
+  }
   .gap-24 {
     gap: calc(var(--spacing) * 24);
+  }
+  .gap-40 {
+    gap: calc(var(--spacing) * 40);
   }
   .self-center {
     align-self: center;
@@ -751,6 +763,12 @@
   }
   .outline-\[\#FECA6A\] {
     outline-color: #FECA6A;
+  }
+  .outline-\[\#FF851B\] {
+    outline-color: #FF851B;
+  }
+  .outline-\[\#FFBA3A\] {
+    outline-color: #FFBA3A;
   }
   .outline-accents {
     outline-color: var(--color-accents);
