--- a/public/output.css
+++ b/public/output.css
@@ -223,6 +223,9 @@
   .top-3 {
     top: calc(var(--spacing) * 3);
   }
+  .top-full {
+    top: 100%;
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -241,8 +244,14 @@
   .z-10 {
     z-index: 10;
   }
+  .z-20 {
+    z-index: 20;
+  }
   .mx-auto {
     margin-inline: auto;
+  }
+  .my-auto {
+    margin-block: auto;
   }
   .-mt-3 {
     margin-top: calc(var(--spacing) * -3);
@@ -332,6 +341,9 @@
   }
   .w-\[50\%\] {
     width: 50%;
+  }
+  .w-\[75\%\] {
+    width: 75%;
   }
   .w-\[85\%\] {
     width: 85%;
@@ -433,6 +445,9 @@
   .justify-center {
     justify-content: center;
   }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -478,9 +493,21 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-0 {
+    border-style: var(--tw-border-style);
+    border-width: 0px;
+  }
+  .border-1 {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .border-2 {
     border-style: var(--tw-border-style);
     border-width: 2px;
+  }
+  .border-4 {
+    border-style: var(--tw-border-style);
+    border-width: 4px;
   }
   .border-b {
     border-bottom-style: var(--tw-border-style);
@@ -496,6 +523,21 @@
   .border-main {
     border-color: var(--color-main);
   }
+  .border-main\/40 {
+    border-color: color-mix(in srgb, #99582a 40%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-color: color-mix(in oklab, var(--color-main) 40%, transparent);
+    }
+  }
+  .border-neutral {
+    border-color: var(--color-neutral);
+  }
+  .border-neutral\/40 {
+    border-color: color-mix(in srgb, #1C2317 40%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-color: color-mix(in oklab, var(--color-neutral) 40%, transparent);
+    }
+  }
   .border-white {
     border-color: var(--color-white);
   }
@@ -505,6 +547,12 @@
   .bg-neutral {
     background-color: var(--color-neutral);
   }
+  .bg-neutral\/50 {
+    background-color: color-mix(in srgb, #1C2317 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-neutral) 50%, transparent);
+    }
+  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -513,6 +561,9 @@
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
+  }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
   .p-8 {
     padding: calc(var(--spacing) * 8);
@@ -564,6 +615,9 @@
   }
   .text-center {
     text-align: center;
+  }
+  .text-left {
+    text-align: left;
   }
   .text-right {
     text-align: right;
@@ -679,6 +733,10 @@
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-xl {
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -708,6 +766,9 @@
   }
   .outline-main {
     outline-color: var(--color-main);
+  }
+  .outline-neutral {
+    outline-color: var(--color-neutral);
   }
   .blur {
     --tw-blur: blur(8px);
@@ -741,6 +802,10 @@
   }
   .will-change-transform {
     will-change: transform;
+  }
+  .outline-none {
+    --tw-outline-style: none;
+    outline-style: none;
   }
   .select-none {
     -webkit-user-select: none;
@@ -782,10 +847,27 @@
       }
     }
   }
+  .hover\:bg-main {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-main);
+      }
+    }
+  }
   .hover\:bg-neutral {
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-neutral);
+      }
+    }
+  }
+  .hover\:bg-neutral\/10 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in srgb, #1C2317 10%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-neutral) 10%, transparent);
+        }
       }
     }
   }
@@ -808,6 +890,26 @@
       @media (hover: hover) {
         color: var(--color-white);
       }
+    }
+  }
+  .focus\:bg-main {
+    &:focus {
+      background-color: var(--color-main);
+    }
+  }
+  .focus\:bg-white {
+    &:focus {
+      background-color: var(--color-white);
+    }
+  }
+  .focus\:text-neutral {
+    &:focus {
+      color: var(--color-neutral);
+    }
+  }
+  .focus\:outline-neutral {
+    &:focus {
+      outline-color: var(--color-neutral);
     }
   }
   .focus\:outline-none {
